Some final adjustments

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -198,6 +198,22 @@
  keywords = {authentication, cryptography, digital signatures, electronic funds transfer, electronic mail, factorization, message-passing, prime number, privacy, public-key cryptosystems, security},
 } 
 
+@article{HRZ10,
+  author    = {Feng Hao and
+               Peter Y. A. Ryan and
+               Piotr Zielinski},
+  title     = {Anonymous voting by two-round public discussion},
+  journal   = {IET Information Security},
+  volume    = {4},
+  number    = {2},
+  year      = {2010},
+  pages     = {62-67},
+  ee        = {http://dx.doi.org/10.1049/iet-ifs.2008.0127},
+  url		= {http://dx.doi.org/10.1049/iet-ifs.2008.0127},
+  doi		= {10.1049/iet-ifs.2008.0127},
+  bibsource = {DBLP, http://dblp.uni-trier.de},
+}
+
 @techreport{ritter13a,
      title = {InstaCircle -- A Location-Bound Ad-Hoc Network for Android Devices},
      author = {Ritter, Jürg},
